--- a/00.수업자료/11-axios-hooks/11-axios-hooks/package.json
+++ b/00.수업자료/11-axios-hooks/11-axios-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "10-simple-ajax",
+  "name": "11-axios-hooks",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
@@ -8,21 +8,18 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.1.3",
-    "classnames": "^2.3.2",
+    "axios-hooks": "^4.0.0",
     "dayjs": "^1.11.6",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "styled-components-breakpoints": "^1.1.1",
-    "styled-reset": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "yarn": "^1.22.19"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start | json-server --watch backend/data.json --port 3001",
