--- a/00.수업자료/13-redux/package.json
+++ b/00.수업자료/13-redux/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.1.3",
     "axios-hooks": "^4.0.0",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-intersection-observer": "^9.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
